--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -33,6 +33,9 @@ nav{
 
 }
 
+
+
+
 .navbar-brand:hover,.navbar-brand:active{
     color: #fff;
 }
@@ -78,3 +81,49 @@ header h1{
     font-weight: 700;
 }
 
+
+#heading1{
+    color:#133964;
+    font-weight: 700;
+}
+
+
+.divider-custom {
+    margin: 1.25rem 0 1.5rem;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .divider-custom .divider-custom-line {
+    width: 100%;
+    max-width: 7rem;
+    height: 0.25rem;
+    background-color: #2c3e50;
+    border-radius: 1rem;
+    border-color: #2c3e50;
+  }
+  .divider-custom .divider-custom-line:first-child {
+    margin-right: 1rem;
+  }
+  .divider-custom .divider-custom-line:last-child {
+    margin-left: 1rem;
+  }
+  .divider-custom .divider-custom-icon {
+    color: #2c3e50;
+    font-size: 2rem;
+  }
+  .divider-custom.divider-light .divider-custom-line {
+    background-color: #fff;
+  }
+  .divider-custom.divider-light .divider-custom-icon {
+    color: #fff;
+  }
+  
+  .divider-custom.divider-light #line{
+    background-color: #2c3e50;
+  }
+
+  .divider-custom.divider-light #icon{
+    color: #2C3E50;
+  }
